# fhirTextualHR

./: .env.example  README.md  main.py  pyproject.toml
src/fhir_client/: client.py  ping.py
src/resource/: patient.py
