[project]
name = "fhirtextualhr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fhir-resources>=8.2.0",
    "fhirpathpy>=2.2.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "textual>=8.2.6",
    "textual-dev>=1.8.0",
]
